--- a/requirements_colab.txt
+++ b/requirements_colab.txt
@@ -18,7 +18,7 @@ matplotlib==3.1.3
 tensorflow==1.15.4
 # tensorboard==2.1.0
 tensorboard
-torchvision==0.5.0
+# torchvision==0.5.0
 scikit-image==0.16.2
 scikit-video==1.1.11
 opencv-python==4.1.2.30
