--- a/requirements_colab.txt
+++ b/requirements_colab.txt
@@ -2,7 +2,7 @@
 tqdm==4.28.1
 yacs==0.1.6
 h5py==2.10.0
-numpy==1.17.5
+# numpy==1.17.5
 scipy==1.4.1
 numba==0.47.0
 smplx==0.1.13
@@ -17,6 +17,7 @@ filterpy==1.4.5
 matplotlib==3.1.3
 tensorflow==1.15.4
 # tensorboard==2.1.0
+tensorboard==1.15.0
 tensorboard
 # torchvision==0.5.0
 scikit-image==0.16.2
